tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:14:20 ----------------------------------------------------
14 |        () => () => io // error
   |                    ^^
   |(io : Cap^) cannot be referenced here; it is not included in the allowed capture set {} of the self type of class Fuzz
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:17:20 ----------------------------------------------------
17 |        () => () => io // error
   |                    ^^
   |(io : Cap^) cannot be referenced here; it is not included in the allowed capture set {} of the self type of class Foo
